[tool.poetry]
name = "Quiz bot"
version = "0.0"
description = ""
authors = ["Andriy Kryvyi <kryvyi.andriy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Babel = "^2.10.3"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
